--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,66 +12,56 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="328dp"
-        android:layout_marginBottom="16dp"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.173"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditEmail3"
+        android:id="@+id/textInputEditEndereco"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
+        android:layout_marginBottom="50dp"
         android:hint="E-mail"
         android:shadowColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSenha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="275dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewEmail3" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/login_logo_recoleta"
-        tools:layout_editor_absoluteX="89dp"
-        tools:layout_editor_absoluteY="97dp" />
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/login_logo_recoleta" />
 
     <TextView
         android:id="@+id/textViewSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Senha"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="356dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="292dp">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:hint="Digite sua senha"
-        android:shadowColor="@color/black"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="347dp"
+        android:text="Senha"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="375dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditEndereco"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/buttonEntrar"
+        android:id="@+id/buttonCadastrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -81,8 +71,9 @@
         android:textColorLink="@android:color/holo_green_light"
         app:iconTint="#4CAF50"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditEmail"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:rippleColor="#4CAF50"
         app:toggleCheckedStateOnClick="true" />
 
@@ -98,8 +89,8 @@
         app:iconTint="#4CAF50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonEntrar"
-        app:rippleColor="#4CAF50"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar"
+        app:rippleColor="#4BD609"
         app:toggleCheckedStateOnClick="true" />
 
     <TextView
@@ -110,8 +101,24 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
         android:text="Esqueci minha senha"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCadastro" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:ems="10"
+        android:hint="Digite sua senha"
+        android:inputType="textPassword"
+        app:endIconMode="password_toggle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSenha" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
