--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,7 +63,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="168dp">
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
                     <Button
                         android:id="@+id/buttonCadastrar3"
@@ -72,7 +73,9 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="25dp"
+                        android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
+                        android:gravity="center|center_vertical"
                         android:text="Cadastrar ponto de coleta"
                         android:textAlignment="viewStart"
                         android:textColorLink="@android:color/holo_green_light"
@@ -96,8 +99,10 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="25dp"
+                        android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Cadastrar ponto de coleta"
+                        android:gravity="center|center_vertical"
+                        android:text="Cadastrar resíduo"
                         android:textAlignment="viewStart"
                         android:textColorLink="@android:color/holo_green_light"
                         android:textSize="10sp"
@@ -116,7 +121,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="117dp">
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
                     <Button
                         android:id="@+id/buttonCadastrar5"
@@ -125,8 +131,10 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="25dp"
+                        android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Cadastrar ponto de coleta"
+                        android:gravity="center|center_vertical"
+                        android:text="Buscar ponto de coleta"
                         android:textAlignment="viewStart"
                         android:textColorLink="@android:color/holo_green_light"
                         android:textSize="10sp"
@@ -149,8 +157,10 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="25dp"
+                        android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Cadastrar ponto de coleta"
+                        android:gravity="center|center_vertical"
+                        android:text="Buscar resíduo"
                         android:textAlignment="viewStart"
                         android:textColorLink="@android:color/holo_green_light"
                         android:textSize="10sp"
