--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -128,6 +128,7 @@
         android:layout_marginTop="81dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="38dp"
+        android:backgroundTint="#4BD609"
         android:text="Cadastrar"
         android:textColorLink="@android:color/holo_green_light"
         app:iconTint="#4CAF50"
