--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,15 @@
             android:background="#FFFFFF"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Dashboard"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
@@ -75,6 +84,7 @@
                         android:layout_marginEnd="25dp"
                         android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
+                        android:backgroundTint="#09B0D6"
                         android:gravity="center|center_vertical"
                         android:text="Cadastrar ponto de coleta"
                         android:textAlignment="viewStart"
@@ -82,7 +92,7 @@
                         android:textSize="10sp"
                         app:cornerRadius="30dp"
                         app:icon="@drawable/icon_recicle"
-                        app:iconPadding="2dp"
+                        app:iconPadding="3dp"
                         app:iconSize="50dp"
                         app:iconTintMode="multiply"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,6 +111,7 @@
                         android:layout_marginEnd="25dp"
                         android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
+                        android:backgroundTint="#09B0D6"
                         android:gravity="center|center_vertical"
                         android:text="Cadastrar resíduo"
                         android:textAlignment="viewStart"
@@ -108,7 +119,7 @@
                         android:textSize="10sp"
                         app:cornerRadius="30dp"
                         app:icon="@drawable/icon_vector"
-                        app:iconPadding="2dp"
+                        app:iconPadding="3dp"
                         app:iconSize="50dp"
                         app:iconTintMode="multiply"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -133,6 +144,7 @@
                         android:layout_marginEnd="25dp"
                         android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
+                        android:backgroundTint="#09B0D6"
                         android:gravity="center|center_vertical"
                         android:text="Buscar ponto de coleta"
                         android:textAlignment="viewStart"
@@ -140,7 +152,7 @@
                         android:textSize="10sp"
                         app:cornerRadius="30dp"
                         app:icon="@drawable/icon_locate"
-                        app:iconPadding="2dp"
+                        app:iconPadding="3dp"
                         app:iconSize="50dp"
                         app:iconTintMode="multiply"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -159,6 +171,7 @@
                         android:layout_marginEnd="25dp"
                         android:layout_marginRight="25dp"
                         android:layout_marginBottom="15dp"
+                        android:backgroundTint="#09B0D6"
                         android:gravity="center|center_vertical"
                         android:text="Buscar resíduo"
                         android:textAlignment="viewStart"
@@ -166,7 +179,7 @@
                         android:textSize="10sp"
                         app:cornerRadius="30dp"
                         app:icon="@drawable/icon_oleo"
-                        app:iconPadding="2dp"
+                        app:iconPadding="3dp"
                         app:iconSize="50dp"
                         app:iconTintMode="multiply"
                         app:layout_constraintBottom_toBottomOf="parent"
