--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
+        android:backgroundTint="#4BD609"
         android:text="Entrar"
         android:textColorLink="@android:color/holo_green_light"
         app:iconTint="#4CAF50"
@@ -84,6 +85,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
+        android:backgroundTint="#4BD609"
         android:text="Ainda não possui cadastro?"
         android:textColorLink="@android:color/holo_green_light"
         app:iconTint="#4CAF50"
@@ -102,6 +104,8 @@
         android:layout_marginEnd="25dp"
         android:text="Esqueci minha senha"
         android:textAllCaps="false"
+        android:textColor="#FF9A51"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCadastro" />
